# portable-brain

./: .gitignore  README.md  pyproject.toml
scripts/db/: delete_tables.py  reset_all.py
src/: README.md
src/agent_service/common/types/: __init__.py
src/common/db/: session.py
src/common/services/llm_service/: __init__.py
src/common/types/: __init__.py
src/memory/: __init__.py
src/memory/actions/: __init__.py
src/memory/common/: __init__.py
src/memory/representations/: __init__.py
src/portable_brain/: __init__.py  app.py
src/portable_brain/agent_service/core_agent/: main_orchestrator.py  tool_calling_agent.py
src/portable_brain/agent_service/execution_agent/: __init__.py  agent.py
src/portable_brain/agent_service/orchestrator/: main_orchestrator.py
src/portable_brain/agent_service/retrieval_agent/: __init__.py  agent.py
src/portable_brain/api/: response_types.py
src/portable_brain/api/request_models/: __init__.py  tests.py
src/portable_brain/api/response_models/: __init__.py  tests.py
src/portable_brain/api/routes/: monitoring_background_tasks.py  test_route.py
src/portable_brain/common/types/: text_embedding_task_types.py
src/portable_brain/config/: .env.example  app_config.py  config.py  settings_mixins.py
src/portable_brain/core/: dependencies.py  lifespan.py
src/portable_brain/memory/: main_retriever.py
src/portable_brain/monitoring/background_tasks/: observation_tracker.py
src/portable_brain/monitoring/fixtures/: __init__.py  action_scenarios.py
tests/: gemini_tool_calling.py  nova_client_test.py
(+62 files in other folders)
